# Qt_Growing

./: .gitignore  CMakeLists.txt  README.md
src/HelloWorld/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/Layout/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/TabWidget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/VBoxLayout/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/build-HelloWorld-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: CMakeCache.txt  HelloWorld.cbp  Makefile  cmake_install.cmake
src/build-HelloWorld-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/.cmake/api/v1/reply/: cache-v2-3eb45459b645c2e251c8.json  cmakeFiles-v1-af6f43131696a8d48742.json  codemodel-v2-48215970f2379b3cdbc2.json  index-2024-01-06T14-17-45-0594.json  target-HelloWorld-Debug-d6430dfdff3d92a85af8.json  target-HelloWorld_autogen-Debug-8c84b8942f07d663c64d.json
src/build-HelloWorld-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/HelloWorld_autogen/EWIEGA46WW/: moc_mainwindow.cpp
